make the website view animated using scrollrevel

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Car Rental Website </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet">
-    
+
+    <!-- link to use icon for website -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
@@ -304,6 +305,10 @@
        <a href="#"> <i class='bx bxl-twitter' ></i> </a>
     </div>
 </div>
+
+<!-- scrollreveal  -->
+<!-- used for animation view of website i.e text, form so on.. -->
+<script src="https://unpkg.com/scrollreveal"></script>
 
 <!-- link js -->
 <script src="main.js"></script>
