--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 </ul>
 
 <div class="header-btn">
-<a href="#" class="sign-up">Sign Up</a>
-<a href="#" class="sign-in">Sign In</a>
+    <a href="#" class="sign-up" onclick="openSignupPopup()">Sign Up</a>
+    <a href="#" class="sign-in" onclick="openSigninPopup()">Sign In</a>
+
 </div>
 </header>
 
@@ -309,6 +310,71 @@
 <!-- scrollreveal  -->
 <!-- used for animation view of website i.e text, form so on.. -->
 <script src="https://unpkg.com/scrollreveal"></script>
+
+<!-- Sign-up Page -->
+<div class="popup-container" id="signup-popup">
+    <div class="popup">
+        <div class="close-btn" onclick="closePopup('signup-popup')">×</div>
+        <div class="form-title">
+            <h2>Sign Up</h2>
+        </div>
+        <form action="#" class="popup-form" onsubmit="return false;">
+            <div class="input-box">
+                <input type="email" placeholder="Email" required>
+            </div>
+            <div class="input-box">
+                <input type="text" placeholder="Full Name" required>
+            </div>
+            <div class="input-box">
+                <input type="text" placeholder="Address" required>
+            </div>
+
+            <div class="input-box">
+                <input type="number" placeholder="Age" required>
+            </div>
+
+            <div class="input-box">
+                <select>
+                    <option value="" disabled selected>Select Gender</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="other">Other</option>
+                </select>
+            </div>
+            
+            <div class="input-box">
+                <input type="password" placeholder="Password" minlength="8" required>
+            </div>
+
+            <div class="input-box">
+                <input type="submit" value="Sign Up" class="btn" >
+            </div>
+
+        </form>
+    </div>
+</div>
+
+<!-- Sign-in Page -->
+<div class="popup-container" id="signin-popup">
+    <div class="popup">
+        <div class="close-btn" onclick="closePopup('signin-popup')"> </div>
+        <div class="form-title">
+            <h2>Sign In</h2>
+        </div>
+        <form action="#" class="popup-form" onsubmit="return false;">
+            <div class="input-box">
+                <input type="email" placeholder="Enter your email" required>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Enter your password" minlength="8" required>
+            </div>
+            <div class="input-box">
+                <input type="submit" value="Sign In" class="btn">
+            </div>
+        </form>
+    </div>
+</div>
+
 
 <!-- link js -->
 <script src="main.js"></script>
