--- a/Client/index.html
+++ b/Client/index.html
@@ -41,6 +41,8 @@
         
     </div>
 
+
+
     <!-- form fillup part of pickup/return and location -->
 <div class="form-container">
     <form action="">
@@ -63,6 +65,10 @@
 </div>
 </section>
 <br><br>
+
+
+
+
 
 <!-- Ride Page Part -->
 <section class="ride" id="ride">
@@ -94,7 +100,12 @@
     </div>
 </section>
 <br><br><br><br>
+
+
+
 <!-- Service page -->
+
+
 <section class="services" id="services">
 
     <div class="heading">
@@ -168,13 +179,20 @@
 </section>
 
 <br><br><br>
+
+
+
+
+
+
+
+
 <!-- About page part -->
 
 <section class="about" id="about">
     <div class="heading">
         <span> About Us </span>
         <br><br>
-        <h1>Best Customer Experience</h1>
     </div>
     <div class="about-container">
         <div class="about-image">
@@ -193,6 +211,12 @@
     </div>
 </section>
 <br><br>
+
+
+
+
+
+
 <!-- review page part -->
 
 <section><div class="reviews" id="reviews">
@@ -251,7 +275,7 @@
 
     <div class="box">
         <div class="rev-image">
-            <img src="image/rev2.jpg" alt="">
+            <img src="" alt="img">
         </div>
         <h2>Bishal Aadhikari</h2>
         <div class="stars">
@@ -280,7 +304,12 @@
 
 </div>
 </section>
+
+
 <br><br>
+
+
+
 <!-- newsLetter -->
 <section class="newsletter">
     <h2>Subscribe TO Newsletter</h2>
@@ -291,6 +320,7 @@
         <a href="#" class="btn">Subscribe</a>
     </div>
 </section>
+
 
 <!-- copyright -->
 
@@ -305,9 +335,12 @@
 
 <!-- scrollreveal  -->
 <!-- used for animation view of website i.e text, form so on.. -->
-<script src="https://unpkg.com/scrollreveal"></script>
+<!-- <script src="https://unpkg.com/scrollreveal"></script> -->
 
 <!-- Sign-up Page -->
+
+
+
 <div class="popup-container" id="signup-popup">
     <div class="popup">
         <div class="close-btn" onclick="closePopup('signup-popup')">×</div>
