--- a/Client/index.html
+++ b/Client/index.html
@@ -28,8 +28,8 @@
     </ul>
 
     <div class="header-btn">
-        <a href="#" class="sign-up" onclick="openSignupPopup()">Sign Up</a>
-        <a href="#" class="sign-in" onclick="openSigninPopup()">Sign In</a>
+        <a href="signup.html" class="sign-up" >Sign Up</a>
+        <a href="signin.html" class="sign-in" >Sign In</a>
     </div>
 </header>
 
@@ -48,7 +48,7 @@
     <form action="">
          <div class="input-box">
             <span>Location</span>
-            <input type="search" name="" id="" placeholder="Search Places ">
+            <input type="text" name="" id="" placeholder="Location">
          </div>
 
          <div class="input-box">
@@ -340,7 +340,7 @@
 <!-- Sign-up Page -->
 
 
-
+<!-- 
 <div class="popup-container" id="signup-popup">
     <div class="popup">
         <div class="close-btn" onclick="closePopup('signup-popup')">×</div>
@@ -381,10 +381,10 @@
 
         </form>
     </div>
-</div>
+</div> -->
 
 <!-- Sign-in Page -->
-<div class="popup-container" id="signin-popup">
+<!-- <div class="popup-container" id="signin-popup">
     <div class="popup">
         <div class="close-btn" onclick="closePopup('signin-popup')"> </div>
         <div class="form-title">
@@ -402,8 +402,10 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
 
+
+<script src="logic.js"></script>
 
 <!-- link js -->
 <script src="main.js"></script>
