--- a/Client/signin.html
+++ b/Client/signin.html
@@ -14,12 +14,12 @@
             <div class="form-title">
                 <h2>Sign In</h2>
             </div>
-            <form action="#" class="popup-form" onsubmit="return false;">
+            <form id="loginform" class="popup-form" >
                 <div class="input-box">
-                    <input type="email" placeholder="Enter your email" required>
+                    <input type="text" id="usernameid" class="username" placeholder="username" required>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Enter your password" minlength="8" required>
+                    <input type="password" id="passwordid" class="password" placeholder="Enter your password"  required>
                 </div>
                 <div class="input-box">
                     <input type="submit" value="Sign In" class="btn">
@@ -27,6 +27,6 @@
             </form>
         </div>
     </div>
-
+    <script src="./auth/login.js"></script>
 </body>
 </html>
