--- a/Client/index.html
+++ b/Client/index.html
@@ -21,7 +21,7 @@
 
         <li><a href="#home">Home</a></li>
         <li><a href="#ride">Ride</a></li>
-        <li><a href="#services">Rent Car</a></li>
+        <li><a id="rentcar">Rent Car</a></li>
         <li><a href="#about">About Us</a></li>
         <li><a href="#reviews">Reviews</a></li>
 
@@ -45,7 +45,9 @@
 
     <!-- form fillup part of pickup/return and location -->
 <div class="form-container">
-    <form action="">
+
+    <h1>We've got you covered</h1> 
+    <!-- <form action="">
          <div class="input-box">
             <span>Location</span>
             <input type="text" name="" id="" placeholder="Location">
@@ -61,7 +63,7 @@
             <input type="date" name="" id="">
          </div>
          <input type="submit" value="Submit" class="btn">
-    </form>
+    </form> -->
 </div>
 </section>
 <br><br>
@@ -119,60 +121,46 @@
                 <div class="box-image">
                     <img src="image/Toyota Land Cruiser.jpg" alt="">
                 </div>
-                <p>2021</p>
+
                 <h3>Toyota Land Cruiser</h3>
-                <h2>Rs.10000 <span>/Day</span></h2>
-                <a href="#" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
                 <div class="box-image">
                     <img src="image/Jaguar Car.png" alt="">
                 </div>
-                <p>2021</p>
                 <h3>Jaguar</h3>
-                <h2>Rs.10000 <span>/Day</span></h2>
-                <a href="#" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
                 <div class="box-image">
                     <img src="image/Mahindra Scorpio.jpg" alt="">
                 </div>
-                <p>2021</p>
+
                 <h3>Mahindra Scorpio</h3>
-                <h2>Rs.10000 <span>/Day</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+
             </div>
 
             <div class="box">
                 <div class="box-image">
                     <img src="image/Honda Amaze.jpg" alt="">
                 </div>
-                <p>2021</p>
                 <h3>Honda Amaze</h3>
-                <h2>Rs.10000 <span>/Day</span></h2>
-                <a href="#" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
                 <div class="box-image">
                     <img src="image/Honda City.jpg" alt="">
                 </div>
-                <p>2021</p>
                 <h3>Honda City</h3>
-                <h2>Rs.10000 <span>/Day</span></h2>
-                <a href="#" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
                 <div class="box-image">
                     <img src="image/Hyundai Creta.jpg" alt="">
                 </div>
-                <p>2021</p>
+
                 <h3>Hyundai Creta</h3>
-                <h2>Rs.10000 <span>/Day</span></h2>
-                <a href="#" class="btn">Rent Now</a>
             </div>
 
         </div>
@@ -312,13 +300,13 @@
 
 <!-- newsLetter -->
 <section class="newsletter">
-    <h2>Subscribe TO Newsletter</h2>
+    <!-- <h2>Subscribe TO Newsletter</h2> -->
    
-    <div class="box">
-        <input type="email" placeholder="Enter your Email">
+    <!-- <div class="box">
+        <!-- <input type="email" placeholder="Enter your Email">
 
-        <a href="#" class="btn">Subscribe</a>
-    </div>
+        <a href="#" class="btn">Subscribe</a> -->
+    <!-- </div> --> 
 </section>
 
 
