--- a/Client/rentcar.html
+++ b/Client/rentcar.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Layout</title>
+    <title>Rent cars</title>
     <link rel="stylesheet" href="rentcar.css">
 </head>
 <body>
+    
+    <a href="theindex.html" class="back-icon">Back</a>
+    
     <div id="parent-container" class="grid-container"></div>
     <script src="rentcar.js"></script>
 </body>
