--- a/Client/signin.html
+++ b/Client/signin.html
@@ -24,6 +24,8 @@
                 <div class="input-box">
                     <input type="submit" value="Sign In" class="btn">
                 </div>
+
+                <p> <a href="signup.html">Don't have an account</a></p>
             </form>
         </div>
     </div>
