--- a/Client/theindex.html
+++ b/Client/theindex.html
@@ -44,7 +44,9 @@
 
     <!-- form fillup part of pickup/return and location -->
 <div class="form-container">
-    <form action="">
+
+    <h1>We've got you covered</h1> 
+    <!-- <form action="">
          <div class="input-box">
             <span>Location</span>
             <input type="text" name="" id="" placeholder="Location">
@@ -60,7 +62,7 @@
             <input type="date" name="" id="">
          </div>
          <input type="submit" value="Submit" class="btn">
-    </form>
+    </form> -->
 </div>
 </section>
 <br><br>
@@ -314,12 +316,12 @@ asdfasdfasdfasdfasdfjl;aksdjfad -->
 
 <!-- newsLetter -->
 <section class="newsletter">
-    <h2>Subscribe TO Newsletter</h2>
+    <!-- <h2>Subscribe TO Newsletter</h2>
    
     <div class="box">
         <input type="email" placeholder="Enter your Email">
 
-        <a href="#" class="btn">Subscribe</a>
+        <a href="#" class="btn">Subscribe</a> -->
     </div>
 </section>
 
@@ -410,6 +412,6 @@ asdfasdfasdfasdfasdfjl;aksdjfad -->
 
 
 <!-- link js -->
-<script src="main.js"></script>
+<script src="theindex.js"></script>
 </body>
 </html>
