--- a/Client/signup.html
+++ b/Client/signup.html
@@ -30,7 +30,7 @@
                 <div class="input-box">
                     <input type="submit" value="Sign Up" class="btn" >
                 </div>
-    
+                <p> <a href="signin.html">Already have an account</a></p>
             </form>
         </div>
     </div>
