--- a/Client/order.html
+++ b/Client/order.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Rental Information</title>
+    <title>Booking List</title>
     <link rel="stylesheet" href="order.css">
 </head>
 <body>
     <div class="container">
-        <h2>Car Rental Information</h2>
-        <div id="rental-info"></div>
+        <h1>Booking List</h1>
+        <div id="booking-list">
+            <!-- Booking entries will be inserted here -->
+        </div>
+        <button id="add-booking">Add Booking</button>
     </div>
     <script src="order.js"></script>
 </body>
