--- a/Client/Admin.html
+++ b/Client/Admin.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="admin.css">
 </head>
 <body>
+    <a href="index.html" class="back-icon">Back</a>
     <h1>Admin panel</h1>
     <div class="container">
         <div class="section add-cars">
@@ -23,10 +24,7 @@
         </div>
         <div class="section orders">
             <h2>Bookings</h2>
-            <label for="client-name">Client Name</label>
-            <p id="client-name"></p>
-            <label for="phone-number">Phone Number</label>
-            <p id="phone-number" ></p>
+            <a href="order.html">View Bookings</a>
             
         </div>
     </div>
