--- a/Client/theindex.html
+++ b/Client/theindex.html
@@ -14,6 +14,7 @@
 <header>
     <!-- Header part -->
     <a href="#" class="logo"><img src="image/jeep.png"></a>
+    
 
     <div class="bx bx-menu" id="menu-icon"> </div>
 
@@ -27,9 +28,10 @@
 
     </ul>
 
-    <div class="header-btn">
-        user
+    <div class="header-btn clickable-div">
+        
     </div>
+    <a href="index.html" id="icon" class="icon hidden">Logout</a>
 </header>
 
 
