--- a/Client/order.html
+++ b/Client/order.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="order.css">
 </head>
 <body>
+    <a href="Admin.html" class="back-icon">Back</a>
     <div class="container">
         <h1>Booking List</h1>
         <div id="booking-list">
-            <!-- Booking entries will be inserted here -->
+            
         </div>
-        <button id="add-booking">Add Booking</button>
+        
     </div>
     <script src="order.js"></script>
 </body>
