add path for myaccount for user | changed minor grammer in order js

--- a/Client/theindex.html
+++ b/Client/theindex.html
@@ -31,7 +31,7 @@
     <div class="header-btn clickable-div">
         
     </div>
-    <a href="index.html" id="icon" class="icon hidden">Logout</a>
+    <a href="userStat.html" id="icon" class="icon hidden">MyAccount</a>
 </header>
 
 
