--- a/Client/update.html
+++ b/Client/update.html
@@ -5,7 +5,31 @@
     <title>Update car</title>
 </head>
 <body>
+    <a href="Admin.html" class="back-icon">Back</a>
+    <div class="main">
+        <h1 class="headerone">What do you want to update?</h1>
+        <div class="photo">Photo</div>
+        <div class="price">Price</div>
+        <div class="modelname">Modelname</div>
+    </div>
+    <div class="picture">
+        <div class="close-btn" > close</div>
+        <input type="file" class="updated-photo">
+        <button class="uphoto-submit">Submit</button>
+        
+    </div>
 
+    <div class="money">
+        <div class="close-btn" >close</div>
+        <input type="number" placeholder="Type the updated price" class="updated-price">
+        <button class="number-submit">Submit</button>
+    </div>
+
+    <div class="carname">
+        <div class="close-btn" > close</div>
+        <input type="text" placeholder="Model name" class="updated-name">
+        <button class="updated-carname">Submit</button>
+    </div>
     <script src="update.js"></script>
 </body>
 </html>
