update page ui finishing touch

--- a/Client/update.html
+++ b/Client/update.html
@@ -5,6 +5,8 @@
     <title>Update car</title>
 </head>
 <body>
+
+    
     <a href="Admin.html" class="back-icon">Back</a>
     <div class="main">
         <h1 class="headerone">What do you want to update?</h1>
@@ -15,21 +17,22 @@
     <div class="picture">
         <div class="close-btn" > close</div>
         <input type="file" class="updated-photo">
-        <button class="uphoto-submit">Submit</button>
+        <button class="photo-submit">Update</button>
         
     </div>
 
     <div class="money">
         <div class="close-btn" >close</div>
         <input type="number" placeholder="Type the updated price" class="updated-price">
-        <button class="number-submit">Submit</button>
+        <button class="number-submit">Update</button>
     </div>
 
     <div class="carname">
         <div class="close-btn" > close</div>
         <input type="text" placeholder="Model name" class="updated-name">
-        <button class="updated-carname">Submit</button>
+        <button class="modelname-submit">Update</button>
     </div>
     <script src="update.js"></script>
+    <script src="updateServer.js"></script>
 </body>
 </html>
