userAccount post status shit

--- a/Client/userStat.html
+++ b/Client/userStat.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="userStat.css">
 </head>
 <body>
-        
+        <div class="main">
+            <div class="order-stat">
+                Order Status
+            </div>
+            <div class="logout">
+                <a href="index.html">LogOut</a>
+            </div>
+        </div>
 </body>
 </html>
